--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "WebSms\\tests\\": "tests"
+      "WebSms\\Tests\\": "tests"
     }
   },
   "scripts": {
