--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     }
   ],
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^8.0",
     "guzzlehttp/guzzle": "^7.0",
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0",
+    "friendsofphp/php-cs-fixer": "^3.8",
+    "phpunit/phpunit": "^9.5",
     "vlucas/phpdotenv": "^3.4"
   },
   "autoload": {
@@ -36,7 +37,8 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit"
+    "test": "vendor/bin/phpunit",
+    "fix-style": "vendor/bin/php-cs-fixer fix"
   },
   "config": {
     "sort-packages": true
