--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.8",
+    "pestphp/pest": "^1.21",
     "phpunit/phpunit": "^9.5",
     "vlucas/phpdotenv": "^3.4"
   },
@@ -37,10 +38,13 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit",
+    "test": "vendor/bin/pest",
     "fix-style": "vendor/bin/php-cs-fixer fix"
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
   }
 }
